Changed case of  font files and img files, also moved script tags to bottom of html page.

--- a/photos.html
+++ b/photos.html
@@ -3,18 +3,18 @@
 <div id="photos">
   <ul id="thumbnails">
 		<li>
-      <a href="img/first.jpg">
-        <img src="img/first.jpg" alt="sammie2">
+      <a href="/img/first.jpg">
+        <img src="img/first.JPG" alt="sammie2">
       </a>
     </li>
     <li>
       <a href="img/sam_BW.jpg">
-        <img src="img/sam_BW.jpg" alt="sammie3">
+        <img src="img/sam_BW.JPG" alt="sammie3">
       </a>
     </li>
     <li>
       <a href="img/beach.jpg">
-        <img src="img/beach.jpg" alt="beach">
+        <img src="img/beach.JPG" alt="beach">
       </a>
     </li>
     <li>
