made various formatting changes and added "use strict" to app.js

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
     
       <div id="menu">
         <ul>
-          <a><li>Web portfolio</li></a>
+          <a href="portfolio.html"><li>Portfolio</li></a>
           <a href="canvas.html"><li>Canvas</li></a>
           <a href="music.html"><li>music</li></a>
           <a href="photos.html"><li>photography</li></a>
