changed main logo to SVG, added animation to biopic photo and various changes to css

--- a/index.html
+++ b/index.html
@@ -13,21 +13,19 @@
     <div class="overlay"></div>
           
 <header>
-    <div class="animation">
-      <canvas id="canvas1" data-processing-sources="/js/processing/test3.pde"></canvas>
-    </div>
-    <h1><a id="heading" href="intro.html">LOWCITIES</a></h1>
-    <h3>Design/Development/music/art</h3>    
-    <div class="nav_menu">
-        <img class="button" src="img/box.png">
+  <a class="logo" href="index.html">
+    <img src="img/lowcitieslogo.svg">
+  </a>
+
+  <div class="nav_menu">
+    <img class="button" src="img/box.png">
     <h5 class="nav">MENU</h5>
-    </div>
+  </div>
 </header>
 <body>
   <div class="wrapper">
-    
-      <div id="menu">
-        <ul>
+    <div id="menu">
+      <ul>
           <a href="portfolio.html"><li>Portfolio</li></a>
           <a href="canvas.html"><li>Canvas</li></a>
           <a href="music.html"><li>music</li></a>
