added a photo carousel to the photos page, made formatting changes to css and deleted unused fonts

--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
   <link rel="stylesheet" href="css/normalize.min.css">
   <link rel="stylesheet" href="css/style.css">
 
+
+
 </head>
     <div class="overlay"></div>
           
@@ -16,7 +18,6 @@
   <a class="logo" href="index.html">
     <img src="img/lowcitieslogo.svg">
   </a>
-
   <div class="nav_menu">
     <img class="button" src="img/box.png">
     <h5 class="nav">MENU</h5>
@@ -24,16 +25,16 @@
 </header>
 <body>
   <div class="wrapper">
-    <div id="menu">
+    <div id="menu" class="menu">
       <ul>
           <a href="portfolio.html"><li>Portfolio</li></a>
-          <a href="canvas.html"><li>Canvas</li></a>
+          <a href="quote.html"><li>Herzog</li></a>
           <a href="music.html"><li>music</li></a>
           <a href="photos.html"><li>photography</li></a>
         </ul>
       </div>
-      <div id="content">
-        <div id="container"></div>
+      <div id="content" class="content">
+        <div id="container" class="container"></div>
       </div>
     </div>
     
