added some css hover properties to the nav menu

--- a/photos.html
+++ b/photos.html
@@ -31,7 +31,7 @@
       </div>
       <div class="photoContainer">
         <img src="img/Double%20Left%20Filled-50.png" class="arrowLeft">
-        <div class="photoFrame">
+        <div id="photoFrame">
             <div id="slider">
               <div class="slide picture1"></div>
               <div class="slide picture2"></div>
