added sticky nav function

--- a/index.html
+++ b/index.html
@@ -25,23 +25,55 @@
 </header>
 <body>
   <div class="wrapper">
-    <div id="menu" class="menu">
-      <ul>
-          <a href="portfolio.html"><li>Portfolio</li></a>
-          <a href="quote.html"><li>Herzog</li></a>
-          <a href="music.html"><li>music</li></a>
-          <a href="photos.html"><li>photography</li></a>
-        </ul>
+    <nav id="menu" class="menu">
+      <div class="navLogo">
+        <a href="index.html">LOWCITIES</a>
       </div>
+      <div class="navItem">
+        <a href="#about">ABOUT</a>
+      </div>
+      <div class="navItem">
+        <a href="#portfolio">PORTFOLIO</a>
+      </div>
+      <div class="navItem">
+        <a href="#music">MUSIC</a>
+      </div>
+      <div class="navItem">
+        <a href="photos.html">PHOTOGRAPHY</a>
+      </div>
+      <div class="navItem">
+        <a href="photos.html">CONTACT</a>
+      </div>
+
+      </nav>
       <div id="content" class="content">
+        <!--About section-->
         <div id="container" class="container">
-          <div id="home" class="home">
+          <section id="about" class="about">
             <div class="biopic"  alt="DL"></div>
               <div class="intro">
                 <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.
                 </p>
               </div>
-          </div>
+          </section>
+        </div>
+        <!--End of About Section-->
+        <!--Portfolio section-->
+        <div class="container">
+          <section id="portfolio">
+
+
+          </section>
+
+        </div>
+        <!--End of portfolio section-->
+        <!--Music page-->
+        <div class="container">
+          <section id="music" class="music">
+            <iframe width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222370619&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+
+            <iframe width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+          </section>
         </div>
       </div>
     </div>
