started changes to photo carousel function

--- a/index.html
+++ b/index.html
@@ -1,133 +1,149 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Lowcities</title>
-  <meta charset="utf-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-  <meta http-equiv="x-ua-compatible" content="ie=edge">
-	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
-  <link rel="stylesheet" href="css/normalize.min.css">
-  <link rel="stylesheet" href="css/style.css">
-</head>
+  <head>
+    <title>Lowcities</title>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    <meta http-equiv="x-ua-compatible" content="ie=edge">
+    <link href="https://fonts.googleapis.com/css?family=Homenaje" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Orbitron" rel="stylesheet">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/css/bootstrap.min.css" integrity="sha384-rwoIResjU2yc3z8GV/NPeZWAv56rSmLldC3R/AZzGRnGxQQKnKkoFVhFQhNUwEyJ" crossorigin="anonymous">
+    <link rel="stylesheet" href="css/normalize.min.css">
+    <link rel="stylesheet" href="css/style.css">
+  </head>
     <div class="overlay"></div>
-<header>
-  <a class="logo" href="index.html">
-    <img src="img/lowcitieslogo.svg">
-  </a>
-  <div class="nav_menu">
-    <img class="button" src="img/box.png">
-    <h5 class="nav">MENU</h5>
-  </div>
-</header>
-<body>
-  <div class="wrapper">
-    <nav id="menu" class="menu">
-      <div class="navLogo">
-        <a href="index.html">LOWCITIES</a>
-      </div>
-      <div class="navItem">
-        <a href="#about">ABOUT</a>
-      </div>
-      <div class="navItem">
-        <a href="#portfolio">PORTFOLIO</a>
-      </div>
-      <div class="navItem">
-        <a href="#music">MUSIC</a>
-      </div>
-      <div class="navItem">
-        <a href="#photoContainer">PHOTOGRAPHY</a>
-      </div>
-      <div class="navItem">
-        <a href="photos.html">CONTACT</a>
-      </div>
-
-      </nav>
-      <div id="content" class="content">
-        <!--About section-->
-        <div id="about" class="about">
-          <section class="container">
-            <div class="biopic"  alt="DL"></div>
-              <div class="intro">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.
-                </p>
+  <header>
+    <a class="logo" href="index.html">
+      <img src="img/lowcitieslogo.svg">
+    </a>
+    <div class="nav_menu">
+      <img class="button" src="img/box.png">
+      <h5 class="nav">MENU</h5>
+    </div>
+  </header>
+  <body>
+    <div class="wrapper">
+  <!--Navigation section-->
+      <nav id="menu" class="menu menu-hide">
+        <div class="navLogo">
+          <a href="index.html">LOWCITIES</a>
+        </div>
+        <div class="navItem">
+          <a href="#about">ABOUT</a>
+        </div>
+        <div class="navItem">
+          <a href="#portfolio">PORTFOLIO</a>
+        </div>
+        <div class="navItem">
+          <a href="#music">MUSIC</a>
+        </div>
+        <div class="navItem">
+          <a href="#photoContainer">PHOTOGRAPHY</a>
+        </div>
+        <div class="navItem">
+          <a href="photos.html">CONTACT</a>
+        </div>
+        </nav>
+  <!--End navigation section-->
+        <div id="content" class="content">
+          <!--About section-->
+          <div id="about" class="about container">
+            <div class="biopic img-shadow"  alt="DL"></div>
+                <div class="intro">
+                  <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Vestibulum purus eros, ullamcorper sed vulputate in, venenatis a enim. Aliquam consequat lorem vel lorem venenatis porta. Donec facilisis turpis eget scelerisque faucibus. Quisque augue erat, cursus non ipsum quis, semper ullamcorper velit. Ut arcu purus, scelerisque non varius non, finibus eget elit. Suspendisse interdum diam eget dui luctus egestas. Quisque vitae enim maximus, ultrices erat non, molestie felis. Fusce id neque nibh. Ut a eros at quam vulputate ullamcorper vitae cursus augue. Fusce et enim non eros sodales porttitor. Nullam quis mauris tortor. Donec cursus, diam vitae euismod blandit, dui ipsum sollicitudin ante, quis tempor quam mauris nec odio. Ut ac libero non urna pharetra congue.
+                  </p>
+                </div>
+          </div>
+          <!--End of About Section-->
+          <!--Portfolio section-->
+          <div id="portfolio" class="full">
+            <h1 class="headline img-shadow">Web Design Portfolio</h1>
+            <div class="container fade-container">
+              <div class="portfolio-content">
+                <div class="site-one-photo img-shadow"></div>
+                <div class="site-one-info">
+                  <h2>Alan Watts: A Brief Tribute</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+                </div>
               </div>
-          </section>
-        </div>
-        <!--End of About Section-->
-        <!--Portfolio section-->
-        <div id="portfolio" class="full">
-          <h1 class="headline">Web Design Portfolio</h1>
-          <section class="container">
-            <div class="portfolio-content">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+              <div class="portfolio-content">
+                <div class="site-two-photo img-shadow"></div>
+                <div class="site-two-info">
+                  <h2>Burden of Memes: A Werner Herzog Quote Generator</h2>
+                  <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+                </div>
+               </div>
             </div>
-          </section>
 
-        </div>
-        <!--End of portfolio section-->
-        <!--Music page-->
-        <div id="music" class="music full">
-          <h1 class="headline">MUSIC PRODUCTION</h1>
-          <section class="container">
-            <div class="music-info">
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-              <div class="track track1">
-              <iframe width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222370619&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-            </div>
-              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+          </div>
+          <!--End of portfolio section-->
+          <!--Music page-->
+          <div id="music" class="music full">
+            <h1 class="headline img-shadow">MUSIC PRODUCTION</h1>
+            <section class="container fade-container">
+              <div class="music-info">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+              </div>
+                <div class="track track1">
+                <iframe class="img-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222370619&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+              </div>
+              <div class="music-info">
+                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+              </div>
               <div class="track track2">
-              <iframe width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
-            </div>
-            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
-            </div>
+                <iframe class="img-shadow" width="80%" height="250" scrolling="no" frameborder="no" src="https://w.soundcloud.com/player/?url=https%3A//api.soundcloud.com/tracks/222092330&amp;auto_play=false&amp;hide_related=false&amp;show_comments=true&amp;show_user=true&amp;show_reposts=false&amp;visual=true"></iframe>
+              </div>
+              <div class="music-info">
+              <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Tempore tempora rerum, est autem cupiditate, corporis a qui libero ipsum delectus quidem dolor at nulla, adipisci veniam in reiciendis aut asperiores omnis blanditiis quod quas laborum nam! Fuga ad tempora in aspernatur pariatur fugit quibusdam dolores sunt esse magni, ut, dignissimos.</p>
+              </div>
 
-          </section>
-        </div>
-        <!--Photo section-->
-        <div id="photoContainer" class="photoContainer full">
-          <h1 class="headline">Photography/Graphic Design</h1>
-          <section class="container">
+            </section>
+          </div>
+          <!--Photo section-->
+         <section>
+            <div id="photoContainer" class="photoContainer full">
+              <h1 class="headline img-shadow">Photography/Graphic Design</h1>
+              <div class="container fade-container photo-flex">
 
-            <div id="photoFrame">
-              <div id="slider">
-                <div class="slide picture1"></div>
-                <div class="slide picture2"></div>
-                <div class="slide picture3"></div>
-                <div class="slide picture4"></div>
+                <div id="photoFrame">
+                  <div id="slider">
+                    <div class="slide picture1"></div>
+                    <div class="slide picture2"></div>
+                    <div class="slide picture3"></div>
+                    <div class="slide picture4"></div>
+                  </div>
+                   <div id="photoSelector" class="photoSelector">
+
+                  </div>
+                </div>
+                <img src="img/arrow_left.svg" class="arrowLeft">
+                <img src="img/arrow_right.svg" class="arrowRight">
               </div>
             </div>
-            <img src="img/Double%20Left%20Filled-50.png" class="arrowLeft">
-            <img src="img/Double%20Right%20Filled-50.png" class="arrowRight">
-          </section>
+           </section>
+          <!--End photo section-->
+
+
+        <footer>
+      <div class="social">
+        <div class="twitter"><a href="http://twitter.com/lowcities"></a></div>
+        <div class="insta"><a href="http://instagram.com/lowcities"></a></div>
+        <div class="linkdin"></div>
+        <div class="github"></div>
         </div>
-        <!--End photo section-->
+      <h3>&copy;2017 David Low</h3>
 
-
+    </footer>
       </div>
     </div>
-    
-    <footer>
-		<div class="social">
-			<div class="twitter"><a href="http://twitter.com/lowcities"></a></div>
-			<div class="insta"><a href="http://instagram.com/lowcities"></a></div>
-			<div class="linkdin"></div>
-			<div class="github"></div>
-     	</div>
-		<h2>&copy;2017 David Low</h2>
-		
-	</footer>
-  <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-  <script
-  src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
-  integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
-  crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
-  <script src="js/photos.js" type="text/javascript" charset="utf-8"></script>
-  <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
-</body>
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+    <script
+    src="https://code.jquery.com/ui/1.12.1/jquery-ui.min.js"
+    integrity="sha256-VazP97ZCwtekAsvgPBSUwPFKdrwD3unUfSGVYrahUqU="
+    crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-alpha.6/js/bootstrap.min.js" integrity="sha384-vBWWzlZJ8ea9aCX4pEW3rVHjgjt7zpkNpZk+02D9phzyeVkE+jo0ieGizqPLForn" crossorigin="anonymous"></script>
+    <script src="js/photos.js" type="text/javascript" charset="utf-8"></script>
+    <script src="js/app.js" type="text/javascript" charset="utf-8"></script>
+  </body>
 </html>
