fixed html in photo section

--- a/index.html
+++ b/index.html
@@ -105,16 +105,17 @@
               <h1 class="headline img-shadow">Photography/Graphic Design</h1>
               <div class="container fade-container photo-flex">
 
-                <div id="photoFrame">
-
-                   <div id="photoSelector" class="photoSelector">
+                <div class="photoBox">
+                  <div id="photoFrame">
+                    <div id="photoSelector" class="photoSelector">
+                    </div>
+                  </div>
+                  <img src="img/arrow_left.svg" class="arrowLeft">
+                  <img src="img/arrow_right.svg" class="arrowRight">
                 </div>
-                </div>
-                <img src="img/arrow_left.svg" class="arrowLeft">
-                <img src="img/arrow_right.svg" class="arrowRight">
               </div>
             </div>
-           </section>
+          </section>
           <!--End photo section-->
 
 
