--- a/index.html
+++ b/index.html
@@ -106,13 +106,12 @@
               <div class="container fade-container photo-flex">
 
                 <div class="photoBox">
-                  <div id="photoFrame">
-                    <div id="photoSelector" class="photoSelector">
-                    </div>
-                  </div>
+                  <div id="photoFrame"></div>
+                  <div id="photoSelector" class="photoSelector"></div>
+                </div>
                   <img src="img/arrow_left.svg" class="arrowLeft">
                   <img src="img/arrow_right.svg" class="arrowRight">
-                </div>
+
               </div>
             </div>
           </section>
